fix exception during startup